@@ -345,3 +345,4 @@
     - Abilitato completamento automatica del filesystem.
 - v.5.9.0 (2025-XX-YY)
     - Supported rc2 filename extension.
+    - Notified icon change on extracting file by SHChangeNotify.
