@@ -689,3 +689,4 @@
     - ファイルシステム入力補完を有効に。
 - v.5.9.0 (2025-XX-YY)
     - rc2 ファイル名拡張子をサポート。
+    - SHChangeNotify によってファイルの抽出時にアイコンの変更を通知。
