@@ -346,3 +346,4 @@
     - 파일 시스템 자동 완성을 활성화했습니다.
 - v.5.9.0 (2025-XX-YY)
     - Supported rc2 filename extension.
+    - Notified icon change on extracting file by SHChangeNotify.
